--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
             font-family: 'Outfit', sans-serif;
         }
     </style>
+    <script>
+        window.onerror = function (msg, url, line, col, error) {
+            var root = document.getElementById('root');
+            if (root) {
+                root.innerHTML = '<div style="padding:40px; color:#ef4444; text-align:center;"><h2 style="font-weight:900;">Initialization Failure</h2><p style="font-size:14px;">' + msg + '</p><pre style="text-align:left; font-size:10px; background:#f9fafb; padding:20px; border-radius:10px; overflow:auto;">' + (error ? error.stack : 'No stack trace available') + '</pre></div>';
+            }
+        };
+    </script>
 </head>
 
 <body class="bg-gray-50 text-gray-900">
